# meeting-extractor

./: .env.example  .gitignore  README.md  app.py  extractor.py  graph_store.py  meeting_extractor.py  notifier.py  pyproject.toml  requirements.txt  transcript.txt
n8n/: Meeting Action Item Extractor.json
src/: app.py  formatter.py
src/templates/: email.html
